System Analusis - Functional requirements in detail part.1

--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -144,11 +144,526 @@
  
  Παραλλαγές: Οι παραλλαγές κάποιου βήματος από το επιτυχημένο σενάριο υπάρχουν επειδή ενώ αυτό που συμβαίνει σε κάποιο βήμα είναι πάντα το ίδιο υπάρχουν πολλοί τρόποι να το κάνουμε.
  
- 
- 
- 
+ \subsubsection{Εφαρμογή}
+
+\definecolor{grayy}{RGB}{200,200,200}
+
+-Δυνατότητα εγγραφής στο σύστημα ως εθελοντής αιμοδότης με χρήση του αριθμού μητρώου κοινωνικής ασφάλισης (Α.Μ.Κ.Α.).
+
+\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+    Εγγραφή στο σύστημα.
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{Στόχος}
+    \\ \hline
+   Ο χρήστης εισάγει τα προσωπικά του δεδομένα με σκοπό να δημιουργήσει το προσωπικό του  μοναδικό αιμοδοτικό προφίλ.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Να διαθέτει αριθμό ΑΜΚΑ.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Μετάβαση στην sign up φόρμα
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	Ο χρήστης πηγαίνει στην επιλογή sign up και εισάγει το ΑΜΚΑ του.
+	\item Στην συνέχεια συμπληρώνει την sign up φόρμα και επιλέγει ολοκλήρωση εγγραφής.
+	\item Το σύστημα δημιουργεί ένα μοναδικό προφίλ για τον χρήστη, το οποίο εισάγει στην βάση δεδομένων του.
+	\item Ο χρήστης ανακατευθύνεται στην αρχική σελίδα 
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις} 
+	\begin{enumerate}
+	\item	Ο χρήστης εισάγει ΑΜΚΑ για το οποίο έχει ήδη δημιουργηθεί κάποιο προφίλ.
+	\item Το σύστημα τον ενημερώνει και τον καθοδηγεί ώστε να ανακτήσει τα στοιχεία του.
+	\end{enumerate}
+	\\*
+	\\ \hline
+    \end{tabular}
+	\end{center}
+
+-Δυνατότητα σύνδεσης στο σύστημα αν έχει πραγματοποιήσει ήδη έγγραφή στο παρελθόν.
+	
+	\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+    Σύνδεση στο σύστημα.
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+        Ο χρήστης εισάγει τα στοιχεία του ώστε να μεταφερθεί στον προσωπικό του λογαριασμό.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης πρέπει να είναι ήδη εγγεγραμμένος στο σύστημα.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Μετάβαση στην sign in φόρμα.
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	Ο χρήστης εισάγει τα στοιχεία του και επιλέγει να συνδεθεί με το σύστημα.
+	\item Το σύστημα αποκρίνεται θετικά αν υπάρχει εγγεγραμμένος  χρήστης με αυτά τα στοιχειά στην βάση δεδομένων του συστήματος, αλλιώς απαγορεύει
+την είσοδο στον χρήστη και τυπώνει το αντίστοιχο μήνυμα λάθους.
+	\item	Ο χρήστης κατευθύνεται είτε στον προσωπικό του λογαριασμό (σωστή εισαγωγή στοιχειών) είτε του ζητείται να ξαναπροσπαθήσει να εισάγει τα σωστά στοιχεία στην sign in φόρμα.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+    \end{tabular}
+\end{center}
+
+-	Δυνατότητα προβολής γεγονότων αιμοδοσίας.
+	
+	\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+    Προβολή γεγονότων αιμοδοσίας
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	Ο χρήστης θέλει να μπαίνει στην εφαρμογή και να βλέπει όλα τα ενεργά γεγονότα αιμοδοσίας, ταξινομημένα ανά την προτίμηση του(απόσταση, εναπομείνασες ημέρες κλπ) καθώς και τις απαραίτητες πληροφορίες για αυτά (τοποθεσία διεξαγωγής, ημερομηνίες, ομάδα αίματος κλπ)
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης πρέπει να είναι ήδη εγγεγραμμένος στο σύστημα.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Επιλογή της καρτέλας "Γεγονότα αιμοδοσίας".
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	Ο χρήστης επιλέγει την καρτέλα "Γεγονότα αιμοδοσίας".
+	\item Το σύστημα φορτώνει από την βάση δεδομένων και την προσωρινή μνήμη τα γεγονότα αιμοδοσίας.
+	\item Ο χρήστης μπορεί να επιλέξει να αλλάξει την σειρά ως προς την οποία εμφανίζονται ανάλογα με κάποιο κριτήριο.
+	\item Ο χρήστης πατώντας πάνω στο event μπορεί να δει επιπλέον πληροφορίες.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+    \end{tabular}
+\end{center}
+
+-Δυνατότητα λήψης ειδοποιήσεων (push notifications) όταν δημιουργείται κάποιο νέο γεγονός αιμοδοσίας για το οποίο ο εθελοντής αιμοδότης πληρεί τα απαραίτητα κριτήρια.
+
+ \begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+     Λήψη ειδοποιήσεων (push notifications).
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να μπορεί να λαμβάνει ειδοποιήσεις από το σύστημα σχετικά με ενεργές αιμοδοσίες. 
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης πρέπει να είναι ήδη εγγεγραμμένος στο σύστημα.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Δημιουργία νέου γεγονότος αιμοδοσίας.
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	Δημιουργείται ένα νέο συμβάν αιμοδοσίας.
+	\item Το σύστημα με βάση το business model του αποφαίνεται αν ο χρήστης είναι σε θέση ή όχι να συμμετάσχει στην αιμοδοσία.
+	\item Το σύστημα με βάση το αποτέλεσμα του προηγούμενου βήματος στέλνει ή όχι ειδοποίηση στον χρήστη.
+	\item Ο χρήστης βλέπει την ειδοποίηση στο κινητό του.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+    \end{tabular}
+\end{center}
+
+-Δυνατότητα αποδοχής, απόρριψης ή αναβολής της ειδοποίησης για το γεγονός αιμοδοσίας.
+
+\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+     Διαχείριση ειδοποιήσεων (push notifications).
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να μπορεί να διαχειρίζεται αποτελεσματικά τις ειδοποιήσεις από το σύστημα σχετικά με ενεργές αιμοδοσίες, είτε πατώντας αποδοχή,  είτε απορρίπτοντας τες, είτε αναβάλλοντας τες.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης πρέπει να είναι ήδη εγγεγραμμένος στο σύστημα.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Λήψη νέας ειδοποίησης (push notification).
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	Λήψη μίας νέας ειδοποίησης από το σύστημα.
+	\item  Ο χρήστης επιλέγει μία από τις εξής ενέργειές: αποδοχή, απόρριψη, αναβολή.
+	\item Το σύστημα αν ο χρήστης επιλέξει αποδοχή μεταφέρει το γεγονός αιμοδοσίας στην λίστα με τα γεγονότα αιμοδοσίας που έχει αποδεχτεί ο χρήστης, αν επιλέξει απόρριψη μεταφέρει το γεγονός αιμοδοσίας στην λίστα με τα γεγονότα που έχει απορρίψει, αλλιώς προγραμματίζει εκ νέου την αποστολή νέας ειδοποίησης.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+    \end{tabular}
+\end{center}			
+			
+			
+-Δυνατότητα διαχείρισης ραντεβού για αιμοδοσία (δημιουργία νέου ραντεβού, μετάθεση , προβολή, ακύρωση).
+
+\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+     Διαχείριση ραντεβού για αιμοδοσία.
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να αλληλεπιδράσει με το σύστημα των ραντεβού, είτε δημιουργώντας ένα νέο ραντεβού για αιμοδοσία, είτε ακυρώνοντας ένα ήδη υπάρχον, είτε μεταθέτοντας την ημερομηνία ενός ραντεβού.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης πρέπει να έχει αποδεχτεί κάποιο γεγονός αιμοδοσίας.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Αποδοχή κάποιου γεγονότος αιμοδοσίας ή μετάβαση στο ημερολόγιο.
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	 Ο χρήστης μεταφέρεται στο ημερολόγιο των ραντεβού, είτε αποδεχόμενος κάποιο γεγονός αιμοδοσίας, είτε με επιλογή της καρτέλας του ημερολογίου.
+	\item  Ο χρήστης βλέπει τις διαθέσιμες ημερομηνίες και ώρες για ραντεβού για πραγματοποίηση αιμοδοσίας, με την επιλογή "Κλείσιμο ραντεβού", καθώς και τα ήδη υπάρχοντα ραντεβού, με τις επιλογές μετάθεση, διαγραφή.
+	\item Το σύστημα ανάλογα με τις προηγούμενες ενέργειες του χρήστη κατοχυρώνει τις τελικές αλλαγές.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+    \end{tabular}
+\end{center}	
+			
+-Δυνατότητα προσθήκης και συγχρονισμού των ραντεβού αιμοδοσίας στο ημερολογίου του χρήστη.
+
+\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+    Προσθήκη των ραντεβού αιμοδοσίας στο ημερολόγιο του χρήστη.
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να μπορεί να συγχρονίσει το σύστημα των ραντεβού του ολικού συστήματος αιμοδοσίας με το ημερολόγιο του, προσθέτοντας τα  ραντεβού αιμοδοσίας στις εφαρμογές ημερολογίου που χρησιμοποιεί(google calendar, calendar κλπ.)
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης πρέπει να έχει κλείσει ραντεβού κάποιο γεγονός αιμοδοσίας.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Άνοιγμα ραντεβού αιμοδοσίας  στο ημερολόγιο και επιλογή "προσθήκη στο ημερολόγιο μου".
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	 Ο χρήστης μεταφέρεται στο ημερολόγιο των ραντεβού αιμοδοσίας της εφαρμογής και αφού ανοίξει κάποιο προγραμματισμένο ραντεβού επιλέγει το "προσθήκη στο ημερολόγιο μου".
+	\item  Το σύστημα, εφόσον ο χρήστης το έχει εξουσιοδοτήσει με άδεια πρόσβασης στις εφαρμογές ημερολογίου του, συγχρονίζει τα ζητούμενα δεδομένα.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+	   \begin{enumerate}
+	\item Το σύστημα δεν έχει τις απαραίτητες άδειες για πρόσβαση στις εφαρμογές ημερολογίων του χρήστη,
+	\item Το σύστημα αιτεί τις απαραίτητες άδειες από τον χρήστη.
+	\item Το σύστημα εκκινεί την διαδικασία συγχρονισμού αν ο χρήστης του παραχωρήσει δικαιώματα πρόσβασης, αλλιώς εμφανίζει μήνυμα αποτυχίας.
+	\end{enumerate}
+	\\ \hline
+    \end{tabular}
+\end{center}	
+		
+-Δυνατότητα ενημέρωσης σχετικά με το υπολειπόμενο διάστημα που πρέπει να παρέλθει ώστε ο εθελοντής να είναι σε θέση να συμμετέχει σε μία νέα αιμοδοσία.
+
+\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+     Ενημέρωση για το υπολειπόμενο διάστημα υποχρεωτικής αποχής του αιμοδότη.
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να μπορεί να ενημερώνεται απλά και γρήγορα σχετικά με το διάστημα ου πρέπει να παρέλθει ώστε να είναι σε θέση να συμμετάσχει ξανά σε αιμοδοσία.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης πρέπει να έχει πραγματοποιήσει κάποια αιμοδοσία.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης μπαίνει στον προσωπικό του λογαριασμό στην εφαρμογή.
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	 Ο χρήστης μπαίνει στον προσωπικό του λογαριασμό στην εφαρμογή.
+	\item  Το σύστημα με βάση τους κανονισμούς των αιμοδοτικών κέντρων για το απαιτούμενο διάστημα αποχής και την ημερομηνία τελευταίας αιμοδοσίας του εθελοντή, υπολογίζει τις υπολειπόμενες μέρες και τις εμφανίζει στον χρήστη.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+    \end{tabular}
+\end{center}	
+
+-Δυνατότητα να κερδίσει πόντους και εμβλήματα βάση των αιμοδοσιών του (gamification system) και να τα μοιραστεί στα μέσα κοινωνικής δικτύωσης.
+
+\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+     Gamification System
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να μπορεί να κερδίζει πόντους και εμβλήματα βάση των αιμοδοσιών του και να κοινοποιεί στα μέσα κοινωνικής δικτύωσης.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης πρέπει να έχει πραγματοποιήσει αιμοδοσίες.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης επιλέγει την καρτέλα "Πόντοι και εμβλήματα".
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	 Ο χρήστης μπαίνει  στην καρτέλα "Πόντοι και εμβλήματα" της εφαρμογής.
+	\item  Το σύστημα με βάση τους κανονισμούς του, κάθε φορά που ο χρήστης ολοκληρώνει μία αιμοδοσία, ανανεώνει τους πόντους του και τα εμβλήματα του, και ενημερώνει τον χρήστη με ειδοποίησεις για κάθε κατάκτηση νέου εμβλήματος και την προσωπική του καρτέλα πόντοι και εμβλήματα.
+	\item Ο χρήστης εκτός από το να βλέπει τα εμβλήματα του μπορεί να επιλέγει κάποιο συγκεκριμένο και να μοιράζεται στα κοινωνικά δίκτυα.
+	\item Το σύστημα, εφόσον ο χρήστης το έχει εξουσιοδοτήσει με άδεια πρόσβασης στους λογαριασμούς του ζητούμενα κοινωνικά δίκτυα, μοιράζεται τα δεδομένα.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+	   	   \begin{enumerate}
+	\item Το σύστημα δεν έχει τις απαραίτητες άδειες για πρόσβαση στους λογαριασμούς των κοινωνικών δικτύων του χρήστη,
+	\item Το σύστημα αιτεί τις απαραίτητες άδειες από τον χρήστη.
+	\item Το σύστημα εκκινεί την διαδικασία κοινοποίησης αν ο χρήστης του παραχωρήσει δικαιώματα πρόσβασης, αλλιώς εμφανίζει μήνυμα αποτυχίας.
+	\end{enumerate}
+	\\ \hline
+    \end{tabular}
+\end{center}	
 
 
+-Δυνατότητα να μοιραστεί και να δημοσιεύσει στοιχεία στα μέσα κοινωνικής δικτύωσης σε κάθε στάδιο της αιμοδοσίας.
+
+\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+    Δημοσίευση στοιχείων από την αιμοδοσία στα μέσα κοινωνικής δικτύωσης.
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να έχει την δυνατότητα σε διάφορα στάδια της αιμοδοσίας (αποδοχή αιτήματος, κλείσιμο ραντεβού) να κοινοποιεί δεδομένα στα μέσα κοινωνικής δικτύωσης.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης να έχει αποδεχτεί κάποια αιμοδοσία.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης επιλέγει να κάνει ανάρτηση μέσω της εφαρμογής στα μέσα κοινωνικής δικτύωσης.
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	 Ο χρήστης επιλέγει να κάνει ανάρτηση μέσω της εφαρμογής σε κάποιο στάδιο της διαδικασίας(αποδοχή, κλείσιμο ραντεβού, πραγματοποίηση αιμοδοσίας) .
+	\item Ο χρήστης συμπληρώνει την περιγραφή της δημοσίευσης και επιλέγει τα μέσα κοινωνικής δικτύωσης στα οποία θέλει να γίνει η ανάρτηση.
+   \item Το σύστημα, εφόσον ο χρήστης το έχει εξουσιοδοτήσει με άδεια πρόσβασης στους λογαριασμούς του στα ζητούμενα κοινωνικά δίκτυα, μοιράζεται τα δεδομένα.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+	   	   \begin{enumerate}
+	\item Το σύστημα δεν έχει τις απαραίτητες άδειες για πρόσβαση στους λογαριασμούς των κοινωνικών δικτύων του χρήστη,
+	\item Το σύστημα αιτεί τις απαραίτητες άδειες από τον χρήστη.
+	\item Το σύστημα εκκινεί την διαδικασία κοινοποίησης αν ο χρήστης του παραχωρήσει δικαιώματα πρόσβασης, αλλιώς εμφανίζει μήνυμα αποτυχίας.
+	\end{enumerate}
+	\\ \hline
+    \end{tabular}
+\end{center}	
+
+-Δυνατότητα δημιουργίας έκκλησης για αίμα σε περίπτωση ανάγκης ατόμων του στενού κύκλου χρήστη και δημοσίευσης του στα μέσα κοινωνικής δικτύωσης.
+
+\begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+    Δημιουργία έκκλησης για αίμα.
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να έχει την δυνατότητα να δημιουργήσει ένα νέο αίτημα για αιμοδοσία και να μπορεί να το δημοσιεύσει μέσω της εφαρμογής στα μέσα κοινωνικής δικτύωσης.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγγεγραμμένος στην εφαρμογή.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης επιλέγει την καρτέλα δημιουργία νέου γεγονότος αιμοδοσίας.
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	 Ο χρήστης επιλέγει να κάνει ανάρτηση μέσω της εφαρμογής  στα κοινωνικά δίκτυα..
+	\item Ο χρήστης συμπληρώνει τα απαραίτητα πεδία στην φόρμα και επιλέγει δημιουργία νέου αιτήματος.
+	\item Ο χρήστης επιλέγει κοινοποίηση του αιτήματος και τα μέσα κοινωνικής δικτύωσης στα οποία θέλει να γίνει η ανάρτηση.
+   \item Το σύστημα, εφόσον ο χρήστης το έχει εξουσιοδοτήσει με άδεια πρόσβασης στους λογαριασμούς του στα ζητούμενα κοινωνικά δίκτυα, μοιράζεται τα δεδομένα.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+	   	   \begin{enumerate}
+	\item Το σύστημα δεν έχει τις απαραίτητες άδειες για πρόσβαση στους λογαριασμούς των κοινωνικών δικτύων του χρήστη,
+	\item Το σύστημα αιτεί τις απαραίτητες άδειες από τον χρήστη.
+	\item Το σύστημα εκκινεί την διαδικασία κοινοποίησης αν ο χρήστης του παραχωρήσει δικαιώματα πρόσβασης, αλλιώς εμφανίζει μήνυμα αποτυχίας.
+	\end{enumerate}
+	\\ \hline
+    \end{tabular}
+\end{center}	
+
+-Δυνατότητα διαχείρισης προφίλ χρήστη.
+
+ \begin{center}
+    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+    \hline
+    \rowcolor{grayy}
+    \textbf{Όνομα σεναρίου χρήσης}
+    \\ \hline    
+    Διαχείριση προσωπικού προφίλ. 
+     \\ \hline
+    \rowcolor{grayy}
+    \textbf{\textbf{Στόχος}}
+    \\ \hline
+ 	 Ο εθελοντής αιμοδότης να έχει την δυνατότητα να βλέπει και να επεξεργάζεται τα προσωπικά του στοιχεία.
+    \\ \hline
+    \rowcolor{grayy}
+    \textbf{Λεπτομέρειες}
+    \\ \hline
+	\textbf{Δράστης} Εθελοντής αιμοδότης.
+	\\*
+	\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγγεγραμμένος στην εφαρμογή.
+	\\*
+	\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης μεταβαίνει στις ρυθμίσεις του προσωπικού του λογαριασμού.
+	\\ \hline
+    \\ \hline
+	\rowcolor{grayy}    
+    \textbf{Ροή γεγονότων}
+    \\* 
+	\textbf{Κύρια ροή γεγονότων}
+	\begin{enumerate}
+	\item	 Ο χρήστης μεταβαίνει στις ρυθμίσεις του προσωπικού του λογαριασμού.
+	\item Τροποποιεί τα στοιχεία που επιθυμεί.
+   \item Το σύστημα αποθηκεύει τις αλλαγές του χρήστη και ανανεώνει το προφίλ του, ώστε να βλέπει τα νέα δεδομένα.
+	\end{enumerate}
+	\\*
+	\textbf{Επεκτάσεις}
+	   \\ \hline
+    \end{tabular}
+\end{center}	
+
+ \subsubsection{Εφαρμογή}
 
 \section{Ανάλυση απαιτήσεων (web, mobile)}
 \section{Σχεδιασμός και αρχιτεκτονική της εφαρμογής (web, mobile)}
