--- a/thesis.tex
+++ b/thesis.tex
@@ -11,7 +11,7 @@
 \usepackage{float}
 \usepackage{pdfpages}
 \restylefloat{table}
-
+\usepackage{xcolor,colortbl}
 
 %----------------------------------------------------------------------------------------
 %	LISTINGS (CODE) TEMPLATE4$  $
@@ -40,7 +40,6 @@
 	frame=single
 	inputencoding=utf8
 }
-
 
 
 \begin{document}
