--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -49,13 +49,13 @@
 				\end{itemize}
 				Όσον αφορά στους υπέρ-διαχειριστές του συστήματος έχουμε τις παρακάτω λειτουργικές απαιτήσεις:
 				\begin{itemize}
-					\item Δυνατότητα διαχείρισης λογαριασμών χρηστών.σσ
-					\item Προβολή στατιστικών για τους χρήστες του συστήματος
+					\item Δυνατότητα διαχείρισης λογαριασμών χρηστών.
+					\item Προβολή στατιστικών για τους χρήστες του συστήματος.
 				\end{itemize}
 
 	\subsection{Social Networking Integration}
 	\subsection{Gamification}
-		Το gamification (παιχνιδοποιήση) ορίζεται ως "η ενσωμάτωση διάφορων πρακτικών και διαδικασιών παιχνιδιού σε καταστάσεις που δεν σχετίζονται με το παιχνίδι με στόχο τη λύση προβλημάτων μέσω της αύξησης της διαδραστικότητας και της συμμετοχής των χρηστών"\cite{Deterding:2011:GDE:2181037.2181040}\cite{Rojas:2013:MPG:2583008.2583033}. Ως εκ τούτου, η το gamification έχει βρει χρήση σε ένα ευρύ φάσμα εφαρμογών από τον χώρο του marketing και της εκπαίδευσης μέχρι και τον χώρο της υγείας \cite{6758978}. Το Gartner έχει εκτιμήσει ότι μέχρι το τέλος του 2015 περισσότερο από το 50\% των επιχειρήσεων θα αξιοποιεί το gamification \cite{gartnerGamification}. Στον ακαδημαϊκό χώρο συναντάμε όλο και περισσότερη έρευνα και δημοσιεύσεις με στόχο να μελετηθεί με μετρήσιμα, αντικειμενικά κριτήρια κατά πόσο είναι αποτελεσματική η χρήση των τεχνικών gamifaction. Ένα παιχνίδι αποτελείται από έξι δομικά στοιχεία, όπως παρουσιάζονται στο σχήμα \ref{fig:gamification_components}.
+		Το gamification (παιχνιδοποιήση) ορίζεται ως "η ενσωμάτωση διάφορων πρακτικών και διαδικασιών παιχνιδιού σε καταστάσεις που δεν σχετίζονται με το παιχνίδι με στόχο τη λύση προβλημάτων μέσω της αύξησης της διαδραστικότητας και της συμμετοχής των χρηστών"\cite{Deterding:2011:GDE:2181037.2181040}\cite{Rojas:2013:MPG:2583008.2583033}. Ως εκ τούτου, το gamification έχει βρει χρήση σε ένα ευρύ φάσμα εφαρμογών, από τον χώρο του marketing και της εκπαίδευσης μέχρι και τον χώρο της υγείας \cite{6758978}. Το Gartner έχει εκτιμήσει ότι μέχρι το τέλος του 2015 περισσότερο από το 50\% των επιχειρήσεων θα αξιοποιεί το gamification \cite{gartnerGamification}. Στον ακαδημαϊκό χώρο συναντάμε όλο και περισσότερη έρευνα και δημοσιεύσεις με στόχο να μελετηθεί με μετρήσιμα, αντικειμενικά κριτήρια κατά πόσο είναι αποτελεσματική η χρήση των τεχνικών gamifaction. Ένα παιχνίδι αποτελείται από έξι δομικά στοιχεία, όπως παρουσιάζονται στο σχήμα \ref{fig:gamification_components}.
 		
 	\begin{figure}[h]
 	    \centering
