Add captions in use case tables

--- a/thesis.tex
+++ b/thesis.tex
@@ -13,6 +13,9 @@
 \restylefloat{table}
 \usepackage{xcolor,colortbl}
 
+
+\definecolor{grayy}{RGB}{200,200,200}
+
 %----------------------------------------------------------------------------------------
 %	LISTINGS (CODE) TEMPLATE4$  $
 %----------------------------------------------------------------------------------------
