--- a/references.bib
+++ b/references.bib
@@ -32,13 +32,28 @@
   Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4260297/}
 }
 
+@Article{Bolton-Maggs2013,
+  Title                    = {Transfusion safety in 2012: main messages from the SHOT Annual Report for 2012},
+  Author                   = {Bolton-Maggs, P. H. B.},
+  Journal                  = {Transfusion Med},
+  Year                     = {2013},
+  Number                   = {4},
+  Pages                    = {217--218},
+  Volume                   = {23},
+
+  __markedentry            = {[ilias:6]},
+  ISSN                     = {1365-3148},
+  Owner                    = {ilias},
+  Publisher                = {Blackwell Publishing Ltd},
+  Timestamp                = {2015.10.08},
+  Url                      = {http://dx.doi.org/10.1111/tme.12060}
+}
+
 @Book{Booch2005,
   Title                    = {Unified Modeling Language User Guide, The (2Nd Edition) (Addison-Wesley Object Technology Series)},
   Author                   = {Booch, Grady and Rumbaugh, James and Jacobson, Ivar},
   Publisher                = {Addison-Wesley Professional},
   Year                     = {2005},
-
-  __markedentry            = {[revekka:6]},
   ISBN                     = {0321267974},
   Owner                    = {revekka},
   Timestamp                = {2015.10.06}
@@ -118,6 +133,16 @@
   Timestamp                = {2015.10.03}
 }
 
+@Book{Cockburn2000,
+  Title                    = {Writing Effective Use Cases},
+  Author                   = {Alistair Cockburn},
+  Publisher                = {Addison-Wesley Professional},
+  Year                     = {2000},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.08}
+}
+
 @Article{Custer2007,
   Title                    = {The consequences of temporary deferral on future whole blood donation},
   Author                   = {Custer, Brian and Chinn, Artina and Hirschler, Nora V. and Busch, Michael P. and Murphy, Edward L.},
@@ -171,7 +196,6 @@
 @Book{dawkins,
   Title                    = {How a Scientist Changed the Way We Think},
   Author                   = {Richard Dawkins},
-  Editor                   = {Alan Grafen},
   Publisher                = {Oxford University Press},
   Year                     = {2007},
 
@@ -318,7 +342,6 @@
 @Book{textbookOfMedicine,
   Title                    = {Textbook of Medicine},
   Author                   = {Lee Goldman},
-  Editor                   = {J. Claude Bennett},
   Publisher                = {Saunders},
   Year                     = {2000},
 
@@ -389,6 +412,7 @@
 @Book{Jacobson,
   Title                    = {The Object Advantage: Business Process Reengineering with Object Technology},
   Author                   = {I. Jacobson, M. Ericsson, A. Jacobson},
+  Publisher                = {Addison-Wesley Professional},
   Year                     = {1994},
 
   Owner                    = {revekka},
@@ -544,7 +568,6 @@
 @Book{bloodDonorSelection,
   Title                    = {Blood donor selection},
   Author                   = {World Health Organization},
-  Editor                   = {United States Centers for Disease Control and Prevention},
   Publisher                = {World Health Organization},
   Year                     = {2012},
 
@@ -683,7 +706,6 @@ URN: urn:nbn:de:0114-fqs0501297},
 @Book{circulatorySystem,
   Title                    = {The Circulatory System},
   Author                   = {Susan Whittemore},
-  Editor                   = {Chelsea House},
   Publisher                = {Chelsea House Pub},
   Year                     = {2009},
 
@@ -725,7 +747,6 @@ URN: urn:nbn:de:0114-fqs0501297},
 @Book{GamificationDesign,
   Title                    = {Gamification by design},
   Author                   = {Gabe Zichermann},
-  Editor                   = {Gamification by design},
   Publisher                = {O'Reilly Media},
   Year                     = {2011},
 
