--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -130,7 +130,7 @@
  \item Του αντίστοιχου κατάλληλου υποσυστήματος: αυτό ουσιαστικά σημαίνει ότι το κυρίως υποσύστημα είναι ανοιχτό και το σενάριο χρήσης περιγράφει πως λειτουργεί ένα μέρος του πχ. το υποσύστημα διαχείρισης του συστήματος.
  \end{itemize}
  
- Ενέργεια ενεργοποίησης: Καθορίζει ποιο γεγονός εκκινά το σενάριο χρήσης. Η ενέργεια εκκίνησης αποτελεί το πρώτο βήμα του σεναρίου χρήσης. 
+ Ενέργεια ενεργοποίησης: Καθορίζει ποιο γεγονός εκκινεί το σενάριο χρήσης. Η ενέργεια εκκίνησης αποτελεί το πρώτο βήμα του σεναρίου χρήσης. 
  
  Ροή γεγονότων
  
