--- a/thesis.tex
+++ b/thesis.tex
@@ -10,11 +10,15 @@
 \usepackage{listings}
 \usepackage{float}
 \usepackage{pdfpages}
+\usepackage{hyperref}
 \restylefloat{table}
 \usepackage{xcolor,colortbl}
 
 
+%----------------------------------------------------------------------------------------
+
 \definecolor{grayy}{RGB}{200,200,200}
+
 
 %----------------------------------------------------------------------------------------
 %	LISTINGS (CODE) TEMPLATE4$  $
