Gamification 1st Draft

--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,5 @@
 \chapter{Εισαγωγή}\label{ch:intro}
-\section{Στόχοι διπλωματικής}
+\section{Στόχοι διπλωματικής}\label{sec:intro_goals}
 Η παρούσα διπλωματική έχει ως στόχο να αντιμετωπίσει τα σημαντικά προβλήματα που εμφανίζονται στον χώρο της εθελοντικής αιμοδοσίας, τόσο σε επίπεδο μηχανογράφησης όσο και σε επίπεδο ανεπάρκειας δωρεών αίματος. Συγκεκριμένα οι στόχοι που ευελπιστούμε να πετύχουμε με το προτεινόμενο σύστημα είναι οι παρακάτω:
 \begin{itemize}
 	\item \textbf{Στρατολόγηση περισσότερων νέων εθελοντών:} Το σύστημα που προτείνουμε στην παρούσα διπλωματική εργασίας και κυρίως η εφαρμογή κινητού που το συνοδεύει πρόκειται να βοηθήσει σε πολύ μεγάλο βαθμό στην εξεύρεση περισσότερων εθελοντών αιμοδοτών και ειδικότερα άτομα νεαρότερης ηλικίας τα οποία χρησιμοποιούν κατά κόρων τα προϊόντα της νέας τεχνολογίας. Η προσθήκη ατόμων της νέας γενιάς στις τάξεις των εθελοντών αιμοδοτών μπορεί να κλείσει την όλο και αυξανόμενη ψαλίδα μεταξύ προσφοράς και ζήτησης προϊόντων αίματος, προσφέροντας ενεργούς και υγιείς αιμοδότες για τις επόμενες δεκαετίες ισοσταθμίζοντας το πρόβλημα της γήρανσης του πληθυσμού. Κάτι το οποίο είναι υψίστης σημασίας δεδομένου ότι τα στατιστικά δείχνουν ότι δεν έχουμε καταφέρει να ευαισθητοποιήσουμε τους νέους έτσι ώστε να γίνουν τακτικοί εθελοντές αιμοδότες \cite{Marantidou2007}, γεγονός που δεν περιορίζεται εντός των ελληνικών συνόρων \cite{Lemmens2005}. Επιπροσθέτως εκμεταλλευόμενοι την κοινωνική επιρροή και κοινωνική ψυχολογία σε συνδυασμό με τα κοινωνικά δίκτυα της σύγχρονης εποχής, οι υπάρχοντες αιμοδότες μπορούν να αποτελέσουν πρότυπο και να χρησιμοποιηθούν ως εργαλείο στρατολόγησης νέων αιμοδοτών \cite{Misje2005}. Για αυτό θεωρούμε ότι είναι υψίστης σημασίας η διασύνδεση του συστήματος μας με τα μέσα κοινωνικής δικτύωσης δίνοντας ένα γενικότερο κοινωνικό τόνο σε όλη την διαδικασία της εθελοντικής αιμοδοσίας.
