--- a/references.bib
+++ b/references.bib
@@ -54,6 +54,7 @@
   Author                   = {Booch, Grady and Rumbaugh, James and Jacobson, Ivar},
   Publisher                = {Addison-Wesley Professional},
   Year                     = {2005},
+
   ISBN                     = {0321267974},
   Owner                    = {revekka},
   Timestamp                = {2015.10.06}
@@ -419,6 +420,16 @@
   Timestamp                = {2015.10.07}
 }
 
+@Article{BlohmIvo2013,
+  Title                    = {Gamification - Design of IT-Based Enhancing Services for Motivational Support and Behavioral Change},
+  Author                   = {Ivo Blohm, Jan Marco Leimeister},
+  Journal                  = {Business \& Information Systems Engineering},
+  Year                     = {2013},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.08}
+}
+
 @Article{landsteinerABO,
   Title                    = {Zur Kenntnis der antifermentativen, lytischen und agglutinierenden Wirkungen des Blutserums und der Lymphe},
   Author                   = {Karl Landsteiner},
@@ -503,6 +514,45 @@
   Publisher                = {Blackwell Science Ltd},
   Timestamp                = {2015.10.03},
   Url                      = {http://dx.doi.org/10.1046/j.1537-2995.1998.38498257375.x}
+}
+
+@InProceedings{Liu:2011:GIE:2072652.2072655,
+  Title                    = {Gamifying Intelligent Environments},
+  Author                   = {Liu, Yefeng and Alexandrova, Todorka and Nakajima, Tatsuo},
+  Booktitle                = {Proceedings of the 2011 International ACM Workshop on Ubiquitous Meta User Interfaces},
+  Year                     = {2011},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {7--12},
+  Publisher                = {ACM},
+  Series                   = {Ubi-MUI '11},
+
+  Acmid                    = {2072655},
+  Doi                      = {10.1145/2072652.2072655},
+  ISBN                     = {978-1-4503-0993-6},
+  Keywords                 = {crowdsourcing, game-based motivation mechanism, gamification, intelligent environments, persuasive system, user engagement},
+  Location                 = {Scottsdale, Arizona, USA},
+  Numpages                 = {6},
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.08},
+  Url                      = {http://doi.acm.org/10.1145/2072652.2072655}
+}
+
+@Article{Lucassen2014194,
+  Title                    = {Gamiﬁcation in Consumer Marketing - Future or Fallacy? },
+  Author                   = {Garm Lucassen and Slinger Jansen},
+  Journal                  = {Procedia - Social and Behavioral Sciences },
+  Year                     = {2014},
+  Note                     = {2nd International Conference on Strategic Innovative Marketing },
+  Pages                    = {194 - 202},
+  Volume                   = {148},
+
+  Doi                      = {http://dx.doi.org/10.1016/j.sbspro.2014.07.034},
+  ISSN                     = {1877-0428},
+  Keywords                 = {Gamiﬁcation},
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.08},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S187704281403938X}
 }
 
 @Article{Marantidou2007,
@@ -606,6 +656,22 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.07}
+}
+
+@Article{citeulike:382810,
+  Title                    = {MDA: A Formal Approach to Game Design and Game Research},
+  Author                   = {Robin, Hunicke and Marc, Leblanc and Robert, Zubek},
+  Year                     = {2004},
+
+  Abstract                 = {{In this paper we present the MDA framework (standing for Mechanics, Dynamics, and Aesthetics), developed and taught as part of the Game Design and Tuning Workshop at the Game Developers Conference, San Jose 2001-2004.
+MDA is a formal approach to understanding games {\OE} one which attempts to bridge the gap between game design and development, game criticism, and technical game research. We believe this methodology will clarify and strengthen the iterative processes of developers, scholars and researchers alike, making it easier for all parties to decompose, study and design a broad class of game designs and game artifacts.}},
+  Citeulike-article-id     = {382810},
+  Citeulike-linkout-0      = {http://cs.northwestern.edu/\~{}hunicke/pubs/MDA.pdf},
+  Owner                    = {ilias},
+  Posted-at                = {2009-04-04 22:42:08},
+  Priority                 = {2},
+  Timestamp                = {2015.10.08},
+  Url                      = {http://cs.northwestern.edu/\~{}hunicke/pubs/MDA.pdf}
 }
 
 @InProceedings{Rojas:2013:MPG:2583008.2583033,
@@ -752,6 +818,25 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Owner                    = {ilias},
   Timestamp                = {2015.09.27}
+}
+
+@Article{raey,
+  Title                    = {Deconstructing gamification: evaluating the effectiveness of continuous measurement, virtual rewards, and social comparison for promoting physical activity},
+  Author                   = {Zuckerman, Oren and Gal-Oz, Ayelet},
+  Journal                  = {Personal and Ubiquitous Computing},
+  Year                     = {2014},
+  Number                   = {7},
+  Pages                    = {1705-1719},
+  Volume                   = {18},
+
+  Doi                      = {10.1007/s00779-014-0783-2},
+  ISSN                     = {1617-4909},
+  Keywords                 = {Persuasive technology; Behavior change; Gamification; Virtual reward; Social comparison; Physical activity},
+  Language                 = {English},
+  Owner                    = {ilias},
+  Publisher                = {Springer London},
+  Timestamp                = {2015.10.08},
+  Url                      = {http://dx.doi.org/10.1007/s00779-014-0783-2}
 }
 
 @Article{karabaggeli-blatsa,
