--- a/thesis.tex
+++ b/thesis.tex
@@ -11,6 +11,7 @@
 \usepackage{float}
 \usepackage{pdfpages}
 \usepackage{hyperref}
+\usepackage{multirow}
 \restylefloat{table}
 \usepackage{xcolor,colortbl}
 
